force-app/main/default/objects/CommercialPlanSequence__c/CommercialPlanSequence__c.object-meta.xml
<CustomObject>
    <description>API Abbrv: CPS</description>
    <label>Commercial Plan Sequence</label>
    <nameField>
        <displayFormat>CSP-{0}</displayFormat>
        <label>CPS Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Plan Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>