force-app/main/default/objects/CommercialPlanSequence__c/fields/BusinessUnitSource__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Unit at the origin of the flow (From)</description>
    <label>BU Source</label>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Commercial Plan Sequences</relationshipLabel>
    <relationshipName>Commercial_Plan_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>