force-app/main/default/objects/CommercialPlanSequence__c/fields/CommercialPlan__c.field-meta.xml
<CustomField>
    <fullName>CommercialPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Evenement de référence</description>
    <label>Marketing Event</label>
    <referenceTo>CommercialPlan__c</referenceTo>
    <relationshipLabel>Commercial Plan Sequences</relationshipLabel>
    <relationshipName>Commercial_Plan_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>