force-app/main/default/objects/CommercialPlanSequence__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Dans le cas où la ligne réfère à une date spécifique</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>