force-app/main/default/objects/CommercialPlanSequence__c/fields/DayNumber__c.field-meta.xml
<CustomField>
    <fullName>DayNumber__c</fullName>
    <description>Dans le cas ouù la ligne réfère à un jour spécifique et n&apos;a pas un type de séquence Jour</description>
    <label>Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>