force-app/main/default/objects/CommercialPlanSequence__c/fields/HierarchyElement__c.field-meta.xml
<CustomField>
    <fullName>HierarchyElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Commercial Plan Sequences</relationshipLabel>
    <relationshipName>Commercial_Plan_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>