force-app/main/default/objects/CommercialPlanSequence__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity ordered</description>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>