force-app/main/default/objects/CommercialPlanSequence__c/fields/SequenceType__c.field-meta.xml
<CustomField>
    <fullName>SequenceType__c</fullName>
    <description>Type de la sequence</description>
    <label>Sequence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Trimester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>