force-app/main/default/objects/CommercialPlanSequence__c/fields/TrimesterNumber__c.field-meta.xml
<CustomField>
    <fullName>TrimesterNumber__c</fullName>
    <description>Trimestre de référence de la ligne (si type séquence est Jour / Semaine / mois)</description>
    <label>Trimester</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>