force-app/main/default/objects/CommercialPlanSequence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type de la sequence</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PreOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>