force-app/main/default/objects/CommercialPlanSequence__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Volume ordered</description>
    <label>Volume</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>